# Miwa

./: CMakeLists.txt  LICENSE  README  README.md  main.cxx  run.sh
miwa/: miwa  types.hpp
miwa/audio/: alchecker.hpp  audio_buffer.hpp  emitter.hpp  internal_values.hpp  ogg_loader.hpp
miwa/core/ecs/: ecs.hpp  world.hpp
miwa/graphics/: Ishader.hpp  blend_mode.hpp  element_buffer_object.hpp  fragment_shader.hpp  frame_buffer.hpp  glchecker.hpp  glloader.hpp  image_formats.hpp  image_loader.cxx  image_loader.hpp  program.hpp  renderable.hpp  sprite.hpp  tex_properties.hpp  texture.hpp  texture_buffer_object.hpp  vertex_array_object.hpp  vertex_buffer_object.hpp  vertex_shader.hpp  view.hpp
miwa/graphics/shaders/: default.frag  default.vert
miwa/managers/: audio.hpp  render.hpp  shaders.hpp  worlds.hpp
miwa/system/: locator.hpp  preproc.hpp
miwa/window/: window.hpp
utils/: cx.hpp  utils.hpp
